--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,29 @@
 spring:
   servlet:
     context-path: /api
+
+  jackson:
+    property-naming-strategy: SNAKE_CASE
+
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
+        show_sql: true
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   h2:
     console:
       enabled: true
-      path: /h2-console
+#      path: /h2-console
       settings:
         web-allow-others: true
   datasource:
-    platform: h2
     driver-class-name: org.h2.Driver
-    url: "jdbc:h2:mem:testdb;MODE=MYSQL;DB_CLOSE_DELAY=-1"
+    url: "jdbc:h2:tcp://localhost/~/test;MODE=MYSQL;DB_CLOSE_DELAY=-1"
+#    url: "jdbc:h2:mem:testdb;MODE=MYSQL;DB_CLOSE_DELAY=-1"
     username: sa
     password:
 server:
